[gd_scene load_steps=10 format=3 uid="uid://bexoq36m2g176"]

[ext_resource type="Script" uid="uid://c4bai8p2ynrr3" path="res://scenes/camera.gd" id="1_qfnet"]
[ext_resource type="Texture2D" uid="uid://dbuyaca2rqy7a" path="res://assets/art/backgrounds/field-background.png" id="2_7r4gi"]
[ext_resource type="Texture2D" uid="uid://cgydcd01sceqr" path="res://assets/art/backgrounds/top-wall-v3.png" id="5_7r4gi"]
[ext_resource type="PackedScene" uid="uid://bgplolig1vhf4" path="res://scenes/ball/ball.tscn" id="5_71j4m"]
[ext_resource type="Script" uid="uid://b50f30bye3a77" path="res://scenes/actors_container.gd" id="5_e3hyu"]
[ext_resource type="PackedScene" uid="uid://diwdrwxttjbp" path="res://scenes/goal.tscn" id="5_i7141"]
[ext_resource type="Texture2D" uid="uid://0aaj2hwbuf6c" path="res://assets/art/backgrounds/bottom-wall.png" id="7_7r4gi"]
[ext_resource type="Texture2D" uid="uid://cdhf5di8i65fh" path="res://assets/art/backgrounds/side-wall.png" id="8_w7kh3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7r4gi"]
size = Vector2(802, 7)

[node name="World" type="Node2D"]

[node name="Camera" type="Camera2D" parent="." node_paths=PackedStringArray("ball")]
zoom = Vector2(1.6, 1.6)
limit_left = 0
limit_top = 0
limit_right = 2350
limit_bottom = 1225
position_smoothing_enabled = true
script = ExtResource("1_qfnet")
ball = NodePath("../ActorsContainer/Ball")

[node name="Backgrounds" type="Node2D" parent="."]

[node name="Field" type="Sprite2D" parent="Backgrounds"]
texture = ExtResource("2_7r4gi")
centered = false

[node name="ActorsContainer" type="Node2D" parent="." node_paths=PackedStringArray("ball", "goal_left", "goal_right")]
y_sort_enabled = true
script = ExtResource("5_e3hyu")
ball = NodePath("Ball")
goal_left = NodePath("PitchObjects/GoalLeft")
goal_right = NodePath("PitchObjects/GoalRight")
team_left = "ARGENTINA"
team_right = "GERMANY"

[node name="PitchObjects" type="Node2D" parent="ActorsContainer"]
y_sort_enabled = true

[node name="GoalLeft" parent="ActorsContainer/PitchObjects" instance=ExtResource("5_i7141")]
position = Vector2(72, 612)

[node name="GoalRight" parent="ActorsContainer/PitchObjects" instance=ExtResource("5_i7141")]
position = Vector2(2279, 612)
scale = Vector2(-1, 1)

[node name="TopWall" type="Sprite2D" parent="ActorsContainer/PitchObjects"]
position = Vector2(91, 164)
texture = ExtResource("5_7r4gi")
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="ActorsContainer/PitchObjects/TopWall"]
visible = false
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ActorsContainer/PitchObjects/TopWall/StaticBody2D"]
position = Vector2(33, 2)
polygon = PackedVector2Array(-29, 327, 13, -1, 2093, -1, 2132, 333, 2132, 374, 2132, 379, 2129, 370, 2080, 14, 20, 14, -24, 353, -29, 380, -29, 359, -29, 327)

[node name="BottomWall" type="Sprite2D" parent="ActorsContainer/PitchObjects"]
position = Vector2(772, 1052)
texture = ExtResource("7_7r4gi")
centered = false
offset = Vector2(0, -12)

[node name="StaticBody2D" type="StaticBody2D" parent="ActorsContainer/PitchObjects/BottomWall"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActorsContainer/PitchObjects/BottomWall/StaticBody2D"]
position = Vector2(401, -3.5)
shape = SubResource("RectangleShape2D_7r4gi")

[node name="LeftWall" type="Sprite2D" parent="ActorsContainer/PitchObjects"]
position = Vector2(63, 636)
texture = ExtResource("8_w7kh3")
centered = false
offset = Vector2(0, -14)

[node name="StaticBody2D" type="StaticBody2D" parent="ActorsContainer/PitchObjects/LeftWall"]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ActorsContainer/PitchObjects/LeftWall/StaticBody2D"]
position = Vector2(-0.4500003, 0)
scale = Vector2(0.94642854, 1)
polygon = PackedVector2Array(14, -1, 28, -1, 12, 116, 0, 116)

[node name="RightWall" type="Sprite2D" parent="ActorsContainer/PitchObjects"]
position = Vector2(2288, 636)
scale = Vector2(-1, 1)
texture = ExtResource("8_w7kh3")
centered = false
offset = Vector2(0, -14)

[node name="StaticBody2D" type="StaticBody2D" parent="ActorsContainer/PitchObjects/RightWall"]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ActorsContainer/PitchObjects/RightWall/StaticBody2D"]
position = Vector2(-0.4500003, 0)
scale = Vector2(0.94642854, 1)
polygon = PackedVector2Array(14, -1, 28, -1, 12, 116, 0, 116)

[node name="Ball" parent="ActorsContainer" instance=ExtResource("5_71j4m")]
position = Vector2(1176, 587)

[node name="SpawnsLeft" type="Node2D" parent="ActorsContainer"]
position = Vector2(425, 180)

[node name="GoaliePosition" type="Node2D" parent="ActorsContainer/SpawnsLeft"]
position = Vector2(-287, 411)

[node name="DefensePosition" type="Node2D" parent="ActorsContainer/SpawnsLeft"]
position = Vector2(72, 211)

[node name="DefensePosition2" type="Node2D" parent="ActorsContainer/SpawnsLeft"]
position = Vector2(72, 611)

[node name="MidFieldPosition" type="Node2D" parent="ActorsContainer/SpawnsLeft"]
position = Vector2(410, 411)

[node name="OffensePosition" type="Node2D" parent="ActorsContainer/SpawnsLeft"]
position = Vector2(610, 211)

[node name="OffensePosition2" type="Node2D" parent="ActorsContainer/SpawnsLeft"]
position = Vector2(610, 611)

[node name="SpawnsRight" type="Node2D" parent="ActorsContainer"]
unique_name_in_owner = true
position = Vector2(1885, 180)
scale = Vector2(-1, 1)

[node name="GoaliePosition" type="Node2D" parent="ActorsContainer/SpawnsRight"]
position = Vector2(-287, 411)

[node name="DefensePosition" type="Node2D" parent="ActorsContainer/SpawnsRight"]
position = Vector2(72, 211)

[node name="DefensePosition2" type="Node2D" parent="ActorsContainer/SpawnsRight"]
position = Vector2(72, 611)

[node name="MidFieldPosition" type="Node2D" parent="ActorsContainer/SpawnsRight"]
position = Vector2(388, 410)

[node name="OffensePosition" type="Node2D" parent="ActorsContainer/SpawnsRight"]
position = Vector2(609, 332)

[node name="OffensePosition2" type="Node2D" parent="ActorsContainer/SpawnsRight"]
position = Vector2(588, 610)
